config-reader-deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-reader
  namespace: playground
spec:
  replicas: 0
  selector:
    matchLabels:
      app: config-reader
  template:
    metadata:
      labels:
        app: config-reader
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: stable-config
  podTemplates:
    - name: canary
      template:
        metadata:
          labels:
            app: config-reader
        spec:
          containers:
            - name: nginx
              image: nginx:alpine
              volumeMounts:
                - name: config-volume
                  mountPath: /usr/share/nginx/html
                  readOnly: true
          volumes:
            - name: config-volume
              configMap:
                name: stable-config
