config-reader-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: config-reader-rollout
  namespace: playground
spec:
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: config-reader
  strategy:
    canary:
      stableService: config-reader-stable
      canaryService: config-reader-canary
      steps:
        - experiment:
            templates:
              - name: noop-experiment
                specRef: default
        - setWeight: 100
        - pause: {}  
      trafficRouting:
        istio:
          virtualService:
            name: config-reader-virtual-service
            routes:
              - primary
