config-reader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-reader-service
  namespace: playground
spec:
  selector:
    app: config-reader
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
